--- a/index.html
+++ b/index.html
@@ -5,21 +5,37 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@500;700&display=swap" rel="stylesheet">
         <link
             rel="icon"
             type="image/png"
             sizes-="32x32"
-            href="./assets/images/scipioiconround32x32"
+            href="./assets/images/scipioiconround32x32.png"
         />
         <link rel="stylesheet" href="style.css"/>
 
         <title>Portfolio | James Scipio McCaffrey</title>
     </head>
     <body>
-        jsmccaffrey
+        <header class="header">
+            jsmccaffrey
+        </header>
 
-        Nice to meet you! I'm James Scipio McCaffrey. Based in the United States, I love to code.
+        <main id="main">
+            <div class="wrapper">
+                <h1>Nice to meet you! I'm James Scipio McCaffrey.</h1>
+            </div>
+        </main>
 
+        <footer class="footer">
+
+        </footer>
+
+        
+        Based in the United States, I love to code.
+        
         Contact me 
 
         2 Years C++
