Add nav bar and more styles, upload link icons

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             rel="icon"
             type="image/png"
             sizes-="32x32"
-            href="./assets/images/scipioiconround32x32.png"
+            href="./assets/images/favicon-32x32.png"
         />
         <link rel="stylesheet" href="style.css"/>
 
@@ -20,7 +20,23 @@
     </head>
     <body>
         <header class="header">
-            jsmccaffrey
+            <nav>
+                <a class="header__home" href="/">jsmccaffrey</a>
+                <a href="https://github.com/jsmccaffrey">
+                    <img
+                     src="./assets/images/icon-github.svg"
+                     alt="GitHub"
+                     width="24.61"
+                     height="24"
+                /></a>
+                <a href="https://www.linkedin.com/in/jsmccaffrey/">
+                    <img
+                        src="./assets/images/icon-linkedin.svg"
+                        alt="LinkedIn"
+                        width="24"
+                        height="24"
+                /></a>
+            </nav>
         </header>
 
         <main id="main">
