--- a/index.html
+++ b/index.html
@@ -21,10 +21,26 @@
     <body>
         <header class="header">
             <div class="wrapper">
-                <nav>
+                <nav class="header__nav">
                     <a class="header__home" href="/">
                         jsmccaffrey
                         <span  class="visually-hidden">(to home page)</span>
+                    </a>
+                    <a class="header__social" href="https://www.linkedin.com/in/jsmccaffrey/">
+                        <svg 
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="25" 
+                        height="24" 
+                        aria-labelledby="socialLinkedIn" 
+                        role="img"
+                        >
+                            <title id="socialLinkedIn">LinkedIn</title>
+                            <path 
+                                fill="#FFF" 
+                                fill-rule="evenodd" 
+                                d="M5.551 3.304c-1.14 0-2.067.926-2.067 2.064 0 1.14.928 2.066 2.067 2.066a2.066 2.066 0 0 0 0-4.13ZM3.767 8.998v11.453h3.562L7.33 8.998H3.767Zm5.798 0V20.45l3.554.002.002-5.668c0-1.454.253-2.941 2.132-2.941 1.851 0 1.851 1.755 1.851 3.036v5.571l3.559-.001v-6.28c0-2.834-.517-5.457-4.27-5.457-1.763 0-2.916.997-3.368 1.85h-.05V8.997h-3.41ZM22.435 24H1.982c-.976 0-1.77-.777-1.77-1.732V1.731C.212.776 1.006 0 1.982 0h20.453c.98 0 1.777.776 1.777 1.73v20.538c0 .955-.797 1.732-1.777 1.732Z"
+                            />
+                        </svg>
                     </a>
                     <a class="header__social" href="https://github.com/jsmccaffrey">
                         <svg 
@@ -42,19 +58,19 @@
                             />
                         </svg>
                     </a>
-                    <a class="header__social" href="https://www.linkedin.com/in/jsmccaffrey/">
+                    <a class="header__social" href=mailto:“jamesscipiomccaffrey@gmail.com”>
                         <svg 
-                        xmlns="http://www.w3.org/2000/svg"
-                        width="25" 
-                        height="24" 
-                        aria-labelledby="socialLinkedIn" 
-                        role="img"
+                            xmlns="http://www.w3.org/2000/svg"
+                            width="25" 
+                            height="19" 
+                            aria-labelledby="socialEmail" k
+                            role="img"
                         >
-                            <title id="socialLinkedIn">LinkedIn</title>
-                            <path 
+                            <title id="socialEmail">Email</title>
+                            <path
                                 fill="#FFF" 
                                 fill-rule="evenodd" 
-                                d="M5.551 3.304c-1.14 0-2.067.926-2.067 2.064 0 1.14.928 2.066 2.067 2.066a2.066 2.066 0 0 0 0-4.13ZM3.767 8.998v11.453h3.562L7.33 8.998H3.767Zm5.798 0V20.45l3.554.002.002-5.668c0-1.454.253-2.941 2.132-2.941 1.851 0 1.851 1.755 1.851 3.036v5.571l3.559-.001v-6.28c0-2.834-.517-5.457-4.27-5.457-1.763 0-2.916.997-3.368 1.85h-.05V8.997h-3.41ZM22.435 24H1.982c-.976 0-1.77-.777-1.77-1.732V1.731C.212.776 1.006 0 1.982 0h20.453c.98 0 1.777.776 1.777 1.73v20.538c0 .955-.797 1.732-1.777 1.732Z"
+                                d="M 19.96875 0.707031 L 18.449219 1.882812 L 11.945312 6.964844 L 5.425781 1.882812 L 3.90625 0.6875 C 2.292969 -0.558594 0 0.632812 0 2.738281 L 0 17.136719 C 0 18.070312 0.734375 18.832031 1.628906 18.832031 L 5.425781 18.832031 L 5.425781 9.21875 L 11.945312 14.304688 L 18.449219 9.21875 L 18.449219 18.8125 L 22.246094 18.8125 C 23.140625 18.8125 23.875 18.050781 23.875 17.117188 L 23.875 2.738281 C 23.875 0.632812 21.582031 -0.558594 19.96875 0.707031 Z M 19.96875 0.707031"
                             />
                         </svg>
                     </a>
