--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                     <img
                       class="hero__image"
                       src="/assets/images/image-profile-mobile.webp"
-                      alt="picture of Adam Keyes"
+                      alt="picture of James McCaffrey"
                       width-="174"
                       height="383"
                     />
@@ -334,9 +334,7 @@
                   <div class="contact__text">
                     <h2 class="contact__headline header-xl">Contact</h2>
                     <p class="contact__description">
-                      I would love to hear about your project and how I could help.
-                      Please fill in the form, and I'll get back to you as soon as
-                      possible.
+                        I’d love to hear from you! Please complete the form, and I’ll respond as soon as possible.
                     </p>
                   </div>
                   <form action="" class="contact__form">
@@ -413,7 +411,7 @@
                 <nav class="header__nav">
                   <h2 class="visually-hidden">Navigation</h2>
                   <a href="/" class="header__home">
-                    adamkeyes
+                    jsmccaffrey
                     <span class="visually-hidden">(to home page)</span>
                   </a>
                   <a href="" class="header__social">
