--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                       meet you! I'm <span>James McCaffrey</span>.
                     </h1>
                     <p class="hero__description">
-                        Based in the United States, I am a Computer Science junior passionate about building projects and learning new skills. Interested in new opportunities to create products users love.
+                        Based in the United States, I'm a Computer Science junior passionate about building projects and learning new skills. Interested in  opportunities to create products users love.
                     </p>
                     <a href="#contact" class="hero__contact underline">Contact me</a>
                   </div>
