Work on contact form

--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                         <a href="" class="underline">View Code</a>
                       </div>
                     </div>
-        
+
                     <div class="projects__item">
                         <picture class="projects__picture">
                             <source
@@ -338,7 +338,7 @@
                         I’d love to hear from you! Please complete the form, and I’ll respond as soon as possible.
                     </p>
                   </div>
-                  <form action="" class="contact__form">
+                  <form action="https://formsubmit.com/jamesscipiomccaffrey@gmail.com" target=”_blank” method="Post" class="contact__form">
                     <div class="contact__control">
                       <label for="name" class="visually-hidden">Name</label>
                       <input
