Remove leading forward slash from src

--- a/index.html
+++ b/index.html
@@ -85,15 +85,15 @@
                   <picture>
                     <source
                       media="(min-width: 62.5em)"
-                      srcset="/assets/images/image-profile-desktop.webp"
+                      srcset="assets/images/image-profile-desktop.webp"
                     />
                     <source
                       media="(min-width: 37.5em)"
-                      srcset="/assets/images/image-profile-tablet.webp"
+                      srcset="assets/images/image-profile-tablet.webp"
                     />
                     <img
                       class="hero__image"
-                      src="/assets/images/image-profile-mobile.webp"
+                      src="assets/images/image-profile-mobile.webp"
                       alt="picture of James McCaffrey"
                       width-="174"
                       height="383"
@@ -101,14 +101,14 @@
                   </picture>
                   <img
                     class="hero__rings"
-                    src="/assets/images/pattern-rings.svg"
+                    src="assets/images/pattern-rings.svg"
                     alt=""
                     width="530"
                     height="129"
                   />
                   <img
                     class="hero__circle"
-                    src="/assets/images/pattern-circle.svg"
+                    src="assets/images/pattern-circle.svg"
                     alt=""
                     width="129"
                     height="129"
@@ -161,7 +161,7 @@
                 </div>
                 <img
                   class="skills__rings"
-                  src="/assets/images/pattern-rings.svg"
+                  src="assets/images/pattern-rings.svg"
                   alt=""
                   width="530"
                   height="129"
@@ -180,11 +180,11 @@
                         <picture class="projects__picture">
                             <source
                                 media="(min-width: 62.5em)"
-                                srcset="/assets/images/large.webp"
+                                srcset="assets/images/large.webp"
                             />
                             <img
                                 class="projects__image"
-                                src="/assets/images/small.webp"
+                                src="assets/images/small.webp"
                                 alt="screenshot"
                                 width-="343"
                                 height="253"
@@ -207,11 +207,11 @@
                         <picture class="projects__picture">
                             <source
                               media="(min-width: 62.5em)"
-                              srcset="/assets/images/large.webp"
+                              srcset="assets/images/large.webp"
                             />
                             <img
                               class="projects__image"
-                              src="/assets/images/small.webp"
+                              src="assets/images/small.webp"
                               alt="screenshot"
                               width-="343"
                               height="253"
@@ -231,11 +231,11 @@
                         <picture class="projects__picture">
                             <source
                               media="(min-width: 62.5em)"
-                              srcset="/assets/images/large.webp"
+                              srcset="assets/images/large.webp"
                             />
                             <img
                               class="projects__image"
-                              src="/assets/images/small.webp"
+                              src="assets/images/small.webp"
                               alt="screenshot"
                               width-="343"
                               height="253"
@@ -256,11 +256,11 @@
                         <picture class="projects__picture">
                             <source
                               media="(min-width: 62.5em)"
-                              srcset="/assets/images/large.webp"
+                              srcset="assets/images/large.webp"
                             />
                             <img
                               class="projects__image"
-                              src="/assets/images/small.webp"
+                              src="assets/images/small.webp"
                               alt="screenshot"
                               width-="343"
                               height="253"
@@ -281,11 +281,11 @@
                         <picture class="projects__picture">
                             <source
                               media="(min-width: 62.5em)"
-                              srcset="/assets/images/large.webp"
+                              srcset="assets/images/large.webp"
                             />
                             <img
                               class="projects__image"
-                              src="/assets/images/small.webp"
+                              src="assets/images/small.webp"
                               alt="screenshot"
                               width-="343"
                               height="253"
@@ -306,11 +306,11 @@
                         <picture class="projects__picture">
                             <source
                               media="(min-width: 62.5em)"
-                              srcset="/assets/images/large.webp"
+                              srcset="assets/images/large.webp"
                             />
                             <img
                               class="projects__image"
-                              src="/assets/images/small.webp"
+                              src="assets/images/small.webp"
                               alt="screenshot"
                               width-="343"
                               height="253"
@@ -349,7 +349,7 @@
                         required
                       />
                       <img
-                        src="/assets/images/icon-invalid.svg"
+                        src="assets/images/icon-invalid.svg"
                         alt=""
                         class="contact__invalid-icon"
                         width="24"
@@ -366,7 +366,7 @@
                         required
                       />
                       <img
-                        src="/assets/images/icon-invalid.svg"
+                        src="assets/images/icon-invalid.svg"
                         alt=""
                         class="contact__invalid-icon"
                         width="24"
@@ -384,7 +384,7 @@
                         required
                       ></textarea>
                       <img
-                        src="/assets/images/icon-invalid.svg"
+                        src="assets/images/icon-invalid.svg"
                         alt=""
                         class="contact__invalid-icon"
                         width="24"
@@ -398,7 +398,7 @@
                 </div>
                 <img
                   class="contact__rings"
-                  src="/assets/images/pattern-rings.svg"
+                  src="assets/images/pattern-rings.svg"
                   alt=""
                   width="530"
                   height="129"
