Change intro text

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             sizes-="32x32"
             href="./assets/images/favicon-32x32.png"
         />
-        <link rel="stylesheet" href="style.css"/>
+        <link rel="stylesheet" href="style.css"/> 
 
         <title>Portfolio | James Scipio McCaffrey</title>
     </head>
@@ -115,7 +115,7 @@
                   />
                   <div class="hero__text">
                     <h1 class="hero__headline header-xl">
-                      Nice to<br />
+                      Glad to<br />
                       meet you! I'm <span>James McCaffrey</span>.
                     </h1>
                     <p class="hero__description">
