--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
                         Based in the United States, I'm a Computer Science junior passionate about building projects and learning new skills. Interested in  opportunities to create products users love.
                     </p>
                     <a href="#contact" class="hero__contact underline">Contact me</a>
+                    <a href="assets/resume-240425.jpg" target="_blank" class="hero__resume underline">View Resume</a>
                   </div>
                 </div>
               </div>
