--- a/index.html
+++ b/index.html
@@ -169,6 +169,19 @@
                 />
               </section>
               
+              <!--
+                  <section class="experience">
+                      <div class="wrapper experience__wrapper">
+                          <div class="experience__grid">
+                              <h2 class="experience__headline header-xl">Experience</h2>
+                              <a href="#contact" class="experience__contact underline"
+                              >Contact me</a
+                              >
+                            </div>
+                        </div>
+                    </section>
+                -->
+
               <section class="projects">
                 <div class="wrapper projects__wrapper">
                   <div class="projects__grid">
