--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
                         I’d love to hear from you! Please complete the form, and I’ll respond as soon as possible.
                     </p>
                   </div>
-                  <form action="https://formsubmit.com/jamesscipiomccaffrey@gmail.com" target=”_blank” method="Post" class="contact__form">
+                  <form action="https://formsubmit.co/jamesscipiomccaffrey@gmail.com" target=”_blank” method="Post" class="contact__form">
                     <div class="contact__control">
                       <label for="name" class="visually-hidden">Name</label>
                       <input
