Add project screenshots and descriptions

--- a/index.html
+++ b/index.html
@@ -194,20 +194,21 @@
                         <picture class="projects__picture">
                             <source
                                 media="(min-width: 62.5em)"
-                                srcset="assets/images/large.webp"
+                                srcset="assets/images/project-multithreadappcloud.webp"
                             />
                             <img
                                 class="projects__image"
-                                src="assets/images/small.webp"
-                                alt="screenshot"
+                                src="assets/images/project-multithreadappcloud.webp"
+                                alt="screenshot of Multithreaded Application Deployed to Cloud"
                                 width-="343"
                                 height="253"
                             />
                             </picture>
                       <h3 class="projects__name">Multithreaded Application for Cloud</h3>
                       <p class="projects__tags">
-                        <span>HTML</span>
-                        <span>CSS</span>
+                        <span>Java</span>
+                        <span>HTML | Angular</span>
+                        <span>Docker</span>
                       </p>
                       <div class="projects__links">
                         <!--
@@ -221,20 +222,20 @@
                         <picture class="projects__picture">
                             <source
                               media="(min-width: 62.5em)"
-                              srcset="assets/images/large.webp"
+                              srcset="assets/images/project-springbackend.webp"
                             />
                             <img
                               class="projects__image"
-                              src="assets/images/small.webp"
-                              alt="screenshot"
+                              src="assets/images/project-springbackend.webp"
+                              alt="screenshot of Spring Framework Java Back End"
                               width-="343"
                               height="253"
                             />
                           </picture>
                       <h3 class="projects__name">Spring Framework Java Back End</h3>
                       <p class="projects__tags">
-                        <span>HTML</span>
-                        <span>CSS</span>
+                        <span>Java</span>
+                        <span>Spring Boot</span>
                       </p>
                       <div class="projects__links">
                         <a href="" class="underline">View Code</a>
@@ -245,21 +246,21 @@
                         <picture class="projects__picture">
                             <source
                               media="(min-width: 62.5em)"
-                              srcset="assets/images/large.webp"
+                              srcset="assets/images/project-adlabusers.webp"
                             />
                             <img
                               class="projects__image"
-                              src="assets/images/small.webp"
-                              alt="screenshot"
+                              src="assets/images/project-adlabusers.webp"
+                              alt="screenshot of Active Directory Bulk User Creation"
                               width-="343"
                               height="253"
                             />
                           </picture>
-                      <h3 class="projects__name">Active Directory User Creation</h3>
+                      <h3 class="projects__name">Active Directory Bulk User Creation</h3>
                       <p class="projects__tags">
-                        <span>HTML</span>
-                        <span>CSS</span>
-                        <span>JavaScript</span>
+                        <span>AD</span>
+                        <span>VM</span>
+                        <span>Powershell</span>
                       </p>
                       <div class="projects__links">
                         <a href="" class="underline">View Code</a>
@@ -270,21 +271,21 @@
                         <picture class="projects__picture">
                             <source
                               media="(min-width: 62.5em)"
-                              srcset="assets/images/large.webp"
+                              srcset="assets/images/project-azureworldmap.webp"
                             />
                             <img
                               class="projects__image"
-                              src="assets/images/small.webp"
-                              alt="screenshot"
+                              src="assets/images/project-azureworldmap.webp"
+                              alt="screenshot of Azure Sentinel World Map"
                               width-="343"
                               height="253"
                             />
                           </picture>
                       <h3 class="projects__name">Azure Sentinel (SIEM) with World Map</h3>
                       <p class="projects__tags">
-                        <span>HTML</span>
-                        <span>CSS</span>
-                        <span>JavaScript</span>
+                        <span>Azure</span>
+                        <span>KQL</span>
+                        <span>Powershell</span>
                       </p>
                       <div class="projects__links">
                         <a href="" class="underline">View Code</a>
@@ -302,7 +303,7 @@
                         I’d love to hear from you! Please complete the form, and I’ll respond as soon as possible.
                     </p>
                   </div>
-                  <form action="https://formsubmit.co/67cb02f3a254f77347f4f3d489489ab6" target=”_blank” method="Post" class="contact__form">
+                  <form action="https://formsubmit.co/67cb02f3a254f77347f4f3d489489ab6" target=”_blank” method="POST" class="contact__form">
                     <div class="contact__control">
                       <label for="name" class="visually-hidden">Name</label>
                       <input
