Correct project description

--- a/index.html
+++ b/index.html
@@ -236,6 +236,7 @@
                       <p class="projects__tags">
                         <span>Java</span>
                         <span>Spring Boot</span>
+                        <span>MySQL</span>
                       </p>
                       <div class="projects__links">
                         <a href="https://github.com/jsmccaffrey/Spring-Backend" target="_blank" class="underline">View Code</a>
