Add Scipio to Intro

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                   <div class="hero__text">
                     <h1 class="hero__headline header-xl">
                       Glad to<br />
-                      meet you! I'm <span>James McCaffrey</span>.
+                      meet you! I'm <span>James Scipio McCaffrey</span>.
                     </h1>
                     <p class="hero__description">
                         Based in the United States, I'm a Computer Science junior passionate about building projects and learning new skills. Interested in  opportunities to create products users love.
@@ -304,7 +304,7 @@
                         I’d love to hear from you! Please complete the form, and I’ll respond as soon as possible.
                     </p>
                   </div>
-                  <form action="https://formsubmit.co/67cb02f3a254f77347f4f3d489489ab6" target=”_blank” method="POST" class="contact__form">
+                  <form action="https://formsubmit.co/.;" target=”_blank” method="POST" class="contact__form">
                     <div class="contact__control">
                       <label for="name" class="visually-hidden">Name</label>
                       <input
