Correct missing email string

--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
                         I’d love to hear from you! Please complete the form, and I’ll respond as soon as possible.
                     </p>
                   </div>
-                  <form action="https://formsubmit.co/.;" target=”_blank” method="POST" class="contact__form">
+                  <form action="https://formsubmit.co/67cb02f3a254f77347f4f3d489489ab6" target=”_blank” method="POST" class="contact__form">
                     <div class="contact__control">
                       <label for="name" class="visually-hidden">Name</label>
                       <input
