--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                       meet you! I'm <span>James Scipio McCaffrey</span>.
                     </h1>
                     <p class="hero__description">
-                        Based in the United States, I'm a Computer Science junior passionate about building projects and learning new skills. Interested in  opportunities to create products users love.
+                        Based in Seattle, Washington. I'm a Computer Science junior passionate about building projects and learning new skills. Interested in  opportunities to create products users love.
                     </p>
                     <a href="#contact" class="hero__contact underline">Contact me </a>
                     <a href="assets/images/resume-240425.jpg" target="_blank" class="hero__resume underline"> View Resume</a>
